<resources>
    <string name="app_name">FindMyTrails</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="password_again">Password Again:</string>
    <string name="password">Password:</string>
    <string name="enter_your_email_address">Enter Your Email Address:</string>
    <string name="username">Username:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="send">Send</string>
    <string name="DistanceFromCur">Distance from current location</string>
    <string name="Lanscape">Lanscape</string>
    <string name="filter_greetings">Apply filters to search</string>
    <string name="search">Search</string>
    <string name="hiking">Hiking</string>
    <string name="mountain_biking">Mountain biking</string>
    <string name="camping">Camping</string>
    <string name="ski">Ski</string>
    <string name="atv">ATV</string>
    <string name="range_within">Range within: </string>
    <string name="cancel">Cancel</string>
    <string name="write_your_review">Write your review</string>
    <string name="submit">Submit</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a number? Sign up now</string>
    <string name="hint_nickname">Nickname</string>
    <string name="btn_signup">Registerr</string>
    <string name="btn_link_to_login">Already registered! Log me</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_footprint">My Footprints</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Setting</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_signout">Sign out</string>
    <string name="drawer_item_comment">My comment</string>
    <string name="Category">Category</string>
    <string name="all">All</string>
    <string name="mountain">Mountain biking</string>
    <string name="nearby">Nearby</string>
    <string name="current">Current location</string>
    <string name="city">Otherwise near the city</string>

</resources>
