<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/RoboTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/nearby"
            android:textColor="#5828b7"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                style="@style/RoboTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:gravity="start"
                android:text="@string/current" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_current"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <EditText
                android:id="@+id/city_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/city"
                android:enabled="false"
                android:maxLines="1"
                android:singleLine="true"  />
        </LinearLayout>




        <TextView
            style="@style/RoboTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/Category"
            android:textColor="#5828b7"
            android:textSize="20sp"

            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                style="@style/RoboTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:gravity="start"
                android:text="@string/all" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                style="@style/RoboTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:gravity="start"
                android:text="@string/hiking" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_hiking"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                style="@style/RoboTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:gravity="start"
                android:text="@string/mountain" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_mountain"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                style="@style/RoboTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:gravity="start"
                android:text="@string/camping" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_camp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/range_textView"
            style="@style/RoboTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/DistanceFromCur"
            android:textColor="#5828b7"
            android:textSize="19sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/range_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:padding="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="10dp">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_radius="5dp"
                fancy:fb_text="Filter"
                fancy:fb_textColor="#FFFFFF" />
            <!--https://github.com/medyo/Fancybuttons-->
            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="#7ab800"
                fancy:fb_focusColor="#9bd823"
                fancy:fb_radius="5dp"
                fancy:fb_text="Cancel"
                fancy:fb_textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
