<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/btn_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >


            <!-- Login Button -->

            <!-- Link to Signup Screen -->

        </LinearLayout>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:maxLines="1"
            android:text="123456"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/email_editText"
            android:layout_alignEnd="@+id/email_editText"
            android:layout_alignLeft="@+id/email_editText"
            android:layout_alignStart="@+id/email_editText" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:maxLines="1"
            android:text="a@a.com"
            android:layout_marginBottom="14dp"
            android:layout_above="@+id/password_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="17dp"
            android:layout_marginEnd="17dp" />

        <Button
            android:id="@+id/signIn_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login"
            android:layout_below="@+id/password_editText"
            android:layout_marginTop="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignRight="@+id/password_editText"
            android:layout_alignEnd="@+id/password_editText" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Not a member? Sign up now."
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_below="@+id/signIn_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView4"
            android:layout_above="@+id/email_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp" />

    </RelativeLayout>

</LinearLayout>